# bubblebrain

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py  health.py  ingest.py  leads.py  telegram.py  woo_webhook.py
app/core/: config.py  constants.py  db.py  logging_config.py  metrics.py  security.py
app/middleware/: rate_limiter.py  request_logging.py
app/models/: chat_memory.py  lead.py
app/schemas/: cache.py  chat.py  ingest.py  lead.py  order.py  scraper.py
app/services/: cache_service.py  category_manager.py  chat_memory_service.py  document_processor.py  guardrails_service.py  intent_detection_service.py  intent_handlers.py  lead_service.py  notification_builder.py  openai_service.py  price_comparator.py  rag_engine.py  scraper_service.py  statistics_service.py  telegram_service.py  vector_service.py  woo_service.py  woo_smart_parser.py
app/utils/: helpers.py  network.py  prompts.py  url_helpers.py
docs/: index.md
docs/explanation/: rag-architecture.md
docs/how-to/: configure-pinecone.md
docs/reference/: api.md
docs/tutorials/: getting-started.md
frontend/: chat-widget.css  chat-widget.js  embed.js  widget.html
plugins/: woocommerce-bot-tracker.php
prometheus/: prometheus.yml
scripts/: export_categories.py  fetch_woo_products.py  seed_faq.py  set_telegram_webhook.py
tests/: conftest.py  test_cache_service.py  test_category_manager.py  test_chat.py  test_chat_memory_service.py  test_core_db.py  test_document_processor.py  test_guardrails.py  test_health.py  test_ingest.py  test_intent_handlers.py  test_leads_pipeline.py  test_main.py  test_openai_service.py  test_price_comparator.py  test_rag_engine.py  test_remote_integration.py  test_schemas_order.py  test_scraper_service.py  test_security.py  test_statistics_service.py  test_telegram_endpoints.py  test_telegram_service.py  test_vector_service.py  test_woo_service.py  test_woo_smart_parser.py
