[tool.poetry]
name = "BubbleBrain"
version = "0.1.0"
description = "CHATBOT AI BACKEND + FLOWISE CHAT EMBED"
authors = ["PyDevDeep"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.14"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
openai = "^1.50.0"
pinecone = "^5.3.0"
pydantic-settings = "^2.5.0"

structlog = "^24.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.14.0"}
slowapi = "^0.1.9"
prometheus-client = "^0.21.0"
httpx = "^0.27.2"
python-multipart = ">=0.0.12,<0.0.32"
pdfplumber = "^0.11.4"
python-docx = "^1.1.2"
aiosqlite = "^0.22.1"
beautifulsoup4 = "^4.14.3"
apscheduler = "^3.11.2"
requests = "^2.34.2"
python-dotenv = "^1.2.2"
sqlalchemy = "^2.0.50"
tenacity = "^9.1.4"
tzdata = "^2026.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = ">=0.9.0"
mypy = "^1.11.2"
pre-commit = "^4.0.0"
pyright = "^1.1.410"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", "logs", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "W", "N", "UP", "C4", "SIM", "RUF", "A", "DTZ", "TID", "ASYNC", "PT"]
ignore = ["F401", "E501", "B008", "RUF001", "RUF002", "RUF003", "N815", "S107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108"]
"**/tests/*" = ["S101", "S105", "S106", "S108"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["^\\.venv/", "^__pycache__/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::ResourceWarning"]
markers = [
    "remote: marks tests that require a running external server"
]

[tool.pyrefly]
project-excludes = [
    "**/__pyrefly_virtual__",
    "C:/__pyrefly_virtual__",
    "C:/__pyrefly_virtual__/**"
]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["."]
executionEnvironments = [
  { root = "tests", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportMissingParameterType = "none", reportUnknownArgumentType = "none", reportUnknownLambdaType = "none" }
]
